   * In attack dialog, split damages and chance to hit and color the later.
   * The Remove and Update add-ons options are disabled when there are no
     add-ons installed
   * Add a Description button to the add-ons downloader
   * For move+attack mouse click, now show the attack dialog before the move.
   * In sidebar, add current bonus/malus info from alignement.
 * WML engine:
   * Fix silent=yes for objectives
   * Allow [story] [part] blocks to specify the title box alignment
     with title_alignment=
   * Implemented FR #14246 (visible_in_shroud= for [label])
   * Modified Lua handling of action handlers and WML objects.
   * Added a lua_function= attribute to standard unit filters.
 * Miscellaneous and bugfixes:
   * Fix broken "Skip Ai moves" option.
   * Changed upload log format and defaulted the new uploader.
   * Fix bug #13268 (corrupted replays due to undo of recall/dismiss)
   * Weapon name change for Drake Enforcer.
   * Fixed the unit tests from 'hanging'
   * Fix bug #14160 (carryover percentage in [endlevel] ignored
     when victory_when_enemies_defeated="yes")
   * Various cleanups to the gui2 code
   * Remove position info from unit list
   * Avoid an assertion failure if haloes are disabled (bug #14297)
   * Fixed linked widgets not getting deregistered upon destruction
   * Fix huge fonts on storyscreens with tiny GUI
   * Fix cmake po-update not doing line wrapping properly
   * Fix bug #14241 (mp campaign timer settings not carried over to 
     next scenario)
   * Started with the a new event handler for gui2
   * Fix unit facings after moving (bug #14336)
   * Fix unit facings after undo/redo
   * Improved the teamcoloring script for images.

Version 1.7.5:
 * Campaigns:
   * Legend of Wesmere
     * Scenario 21 redesigned
 * Graphics:
   * New base frame and animations for the Drake Blademaster.
 * Language and i18n:
   * Setup for tracking localized images.
   * Updated translations: Chinese (Traditional), Lithuanian, Serbian.