@@ -13,7 +13,7 @@ The release team should empty this file after each release.
 
 ***
 
-REPLACE ME WITH CONTENT...
+A new option was added to choose whether or not to interupt unit movement when an ally unit is sighted
 
 ***
 
